closes #10
removes the jgrapht library and replaces it with custom dijkstra code